Reverted to Java 8 since the vlcj negates the issue caused by javafx media